add spring-boot native compile